--- a/spring-webmvc/src/main/resources/org/springframework/web/servlet/DispatcherServlet.properties
+++ b/spring-webmvc/src/main/resources/org/springframework/web/servlet/DispatcherServlet.properties
@@ -6,19 +6,23 @@ org.springframework.web.servlet.LocaleResolver=org.springframework.web.servlet.i
 
 org.springframework.web.servlet.ThemeResolver=org.springframework.web.servlet.theme.FixedThemeResolver
 
+# url映射
 org.springframework.web.servlet.HandlerMapping=org.springframework.web.servlet.handler.BeanNameUrlHandlerMapping,\
 	org.springframework.web.servlet.mvc.annotation.DefaultAnnotationHandlerMapping
 
+# 适配器
 org.springframework.web.servlet.HandlerAdapter=org.springframework.web.servlet.mvc.HttpRequestHandlerAdapter,\
 	org.springframework.web.servlet.mvc.SimpleControllerHandlerAdapter,\
 	org.springframework.web.servlet.mvc.annotation.AnnotationMethodHandlerAdapter
 
+# 异常解析
 org.springframework.web.servlet.HandlerExceptionResolver=org.springframework.web.servlet.mvc.annotation.AnnotationMethodHandlerExceptionResolver,\
 	org.springframework.web.servlet.mvc.annotation.ResponseStatusExceptionResolver,\
 	org.springframework.web.servlet.mvc.support.DefaultHandlerExceptionResolver
 
 org.springframework.web.servlet.RequestToViewNameTranslator=org.springframework.web.servlet.view.DefaultRequestToViewNameTranslator
 
+# 视图解析
 org.springframework.web.servlet.ViewResolver=org.springframework.web.servlet.view.InternalResourceViewResolver
 
 org.springframework.web.servlet.FlashMapManager=org.springframework.web.servlet.support.SessionFlashMapManager
