--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ test-output
 atlassian-ide-plugin.xml
 .gradletasknamecache
 *.log
+spring-beans/spring.log.2017-09-06
+spring-beans/spring.log.2017-09-07
