--- a/spring-context/src/test/resources/log4j.properties
+++ b/spring-context/src/test/resources/log4j.properties
@@ -1,9 +1,13 @@
-log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss,SSS} [%c] - %m%n
+log4j.rootLogger=info,stdout,logfile
 
-log4j.rootCategory=WARN, console
-log4j.logger.org.springframework.core=INFO
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=[%d] %-5p %t (%F\:%L) - %m%n
 
-#log4j.logger.org.springframework=TRACE
+log4j.appender.logfile=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.logfile.File=./spring.log
+log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.logfile.layout.ConversionPattern=[%d] %-5p %t (%F\:%L) - %m%n
+log4j.appender.logfile.DatePattern='.'yyyy-MM-dd
+
 
