add some comment for SpringMVC -> HandlerExceptionResolver

--- a/spring-webmvc/src/main/resources/org/springframework/web/servlet/DispatcherServlet.properties
+++ b/spring-webmvc/src/main/resources/org/springframework/web/servlet/DispatcherServlet.properties
@@ -3,7 +3,7 @@
 # Not meant to be customized by application developers.
 
 org.springframework.web.servlet.LocaleResolver=org.springframework.web.servlet.i18n.AcceptHeaderLocaleResolver
-
+# 主题解析器
 org.springframework.web.servlet.ThemeResolver=org.springframework.web.servlet.theme.FixedThemeResolver
 
 # url映射
